<resources>
    <string name="app_name">RecyclerViewApp</string>
    <string name="name">Name</string>
    <string name="verticallistimage">verticalListImage</string>
    <string name="verticalLIstNameText">Name</string>
    <string name="verticalListNumberText">Number</string>
    <string name="addbutton">addButton</string>
    <string name="add_contact">Add Contact</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_number">Enter Number</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="update_contact">Update Contact</string>
</resources>