<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:background="@color/design_default_color_secondary"
    android:paddingLeft="21dp"
    android:paddingRight="21dp"
    android:paddingBottom="11dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#fff"
        android:layout_margin="18dp"
        android:text="@string/add_contact"/>

    <EditText
        android:id="@+id/edtName"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="1"
        android:hint="@string/enter_name"
        android:background="#fff"
        android:padding="11dp"
        android:layout_marginBottom="11dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtNumber"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:autofillHints="1"
        android:hint="@string/enter_number"
        android:background="#fff"
        android:padding="11dp"
        android:layout_marginBottom="11dp"
        android:inputType="number"
        tools:ignore="TextFields" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:backgroundTint="#fff"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="15dp"
        android:textColor="@color/design_default_color_secondary"
        android:layout_gravity="end"/>


</LinearLayout>