<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="11dp"
        tools:ignore="UselessParent">
        
        <ImageView
            android:id="@+id/verticalListImage"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/verticallistimage"
            android:scaleType="centerCrop"
            android:src="@drawable/pic1"/>

        <TextView
            android:id="@+id/verticalListNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verticalLIstNameText"
            android:layout_toEndOf="@id/verticalListImage"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/verticalListNumberText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/verticalListNameText"
            android:text="@string/verticalListNumberText"
            android:layout_toEndOf="@id/verticalListImage"
            android:layout_marginStart="10dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>



        
    </RelativeLayout>

</LinearLayout>